--- a/css/studentInfo.css
+++ b/css/studentInfo.css
@@ -1,10 +1,17 @@
-/* Navbar Styles */
+body{
+    background-color: rgb(215, 247, 247);
+}
 nav {
     height: 50px;
-    background-color: rgb(32, 4, 133);
-    display: flex;
-    align-items: center;
+    background-color: rgb(8, 137, 160);
     padding: 0 10px;
+    font-size: 35px;
+    color: white;
+}
+.nav-title {
+    font-style: italic; 
+    font-weight: bold;
+    font-size: 30px; 
 }
 
 
@@ -16,6 +23,7 @@ nav button {
     border: none;
     font-size: 24px;
     cursor: pointer;
+    display: left;
 }
 
 /* College Logo Centering */
@@ -73,11 +81,21 @@ nav button {
     color: white;
     cursor: pointer;
 }
-footer{
-    height: 40px;
-    background-color: #575757;
-    justify-content: center;
+.studentCard1{
     display: flex;
+    justify-content: center;
     align-items: center;
-    color: aliceblue;
+    gap: 30px;
+}
+.studentCard2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+.studentCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
 }
